# Simple-Tensor

./: .gitignore  CMakeLists.txt  Intro.md  Project - Simple Tensor.md  README.md  main.cpp
include/: Shape.h  Storage.h  allocator.h  array.h  exception.h  exp.h  oper.h  shape.h  storage.h  tensor.h  tensor_impl.h
src/: Shape.cpp  Storage.cpp  allocator.cpp  exception.cpp  oper.cpp  shape.cpp  storage.cpp  tensor.cpp  tensor_impl.cpp  unit_test.cpp
